# shrmemL

./: .gitignore  CMakeLists.txt  definitions.hpp
Client/: CMakeLists.txt  main2.cpp
Client/include/: Client.hpp
Client/src/: Client.cpp
Mains/: CMakeLists.txt  main1.cpp  main2.cpp
Server/: CMakeLists.txt  main1.cpp
Server/include/: Server.hpp
SharedMemory/: CMakeLists.txt
SharedMemory/Client/include/: Client.hpp
SharedMemory/Core/src/: SharedMemory.cpp
SharedMemory/Server/include/: Server.hpp
SharedMemory/Server/src/: Server.cpp
SharedMemory/include/: Protocol.hpp  SharedMemory.hpp
SharedMemory/src/: SharedMemory.cpp
